# Wordle

./: CMakeLists.txt  README.md  main.cpp  wordle_client_main.cpp
dictionary/: 5_words_freq.txt
include/: frequent_words.h  util.h  wordle.h  wordle_client.h  words.h
include/words/: frequent_words.h  words.h
test/: test_util.h  test_util_test.cpp  wordle_test.cpp  words_test.cpp
